add exercise api
